[gd_scene load_steps=15 format=2]

[ext_resource path="res://Resources/Sprite/Enemies/Drone/Drone2.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Obstacles/Enemy_Drone.gd" type="Script" id=3]
[ext_resource path="res://Obstacles/Drone_Sprite.gd" type="Script" id=4]
[ext_resource path="res://Resources/Sprite/Enemies/Drone/Drone4.png" type="Texture" id=5]
[ext_resource path="res://Resources/Sprite/Enemies/Drone/Drone6.png" type="Texture" id=6]
[ext_resource path="res://Resources/Sprite/Enemies/Drone/Drone3.png" type="Texture" id=7]
[ext_resource path="res://Resources/Sprite/Enemies/Drone/Drone5.png" type="Texture" id=8]
[ext_resource path="res://Resources/Sprite/Enemies/Drone/Drone1.png" type="Texture" id=9]
[ext_resource path="res://Resources/laser/laserbeam.gd" type="Script" id=10]

[sub_resource type="NavigationPolygon" id=97]
vertices = PoolVector2Array( -342, -8, 346, -372, 265.791, -268.975, 247, -48, 235, -16, 226, -89, 344, -361, 519, -283, 482, -256, 429, -260, 471, -169, 512, -169, 481, -102, 468, -138, 449, -122, 409, -103, 315, -123, 365, -227, 268, -268, 430, -227, 461, -195, 460, -166, 427, -171, 274, -101, 254, -101, 194, -89, 252, -77, 362, -75, 361, -60, 323, -57, 276, -101, 315, -153, 150, -49, 151, -10, -6, -10, 427, -152, 478, -208, 478, -195, -161, 88, -339, 87, -150, 42, -6, 14, 307, -47, 451.34, -206, 373, -38, 383, -59, 409, -38, 388, -65, 388, -101, 366, -204, 413, -206, 450, -257, 592, -272 )
polygons = [ PoolIntArray( 0, 1, 2 ), PoolIntArray( 3, 4, 5 ), PoolIntArray( 6, 7, 8, 9 ), PoolIntArray( 10, 11, 12, 13 ), PoolIntArray( 14, 13, 12 ), PoolIntArray( 14, 12, 15, 16 ), PoolIntArray( 17, 18, 6, 9, 19 ), PoolIntArray( 20, 21, 22 ), PoolIntArray( 2, 23, 24 ), PoolIntArray( 0, 2, 24, 25 ), PoolIntArray( 26, 27, 28, 29 ), PoolIntArray( 30, 18, 17, 31 ), PoolIntArray( 32, 33, 34 ), PoolIntArray( 22, 35, 31 ), PoolIntArray( 36, 37, 20 ), PoolIntArray( 38, 39, 0, 40 ), PoolIntArray( 34, 41, 40, 0 ), PoolIntArray( 42, 3, 5, 26 ), PoolIntArray( 25, 32, 34, 0 ), PoolIntArray( 36, 20, 22, 31, 43 ), PoolIntArray( 5, 25, 24 ), PoolIntArray( 5, 24, 26 ), PoolIntArray( 29, 42, 26 ), PoolIntArray( 44, 29, 28, 45, 46 ), PoolIntArray( 46, 45, 47 ), PoolIntArray( 15, 46, 47, 48 ), PoolIntArray( 16, 15, 48, 30 ), PoolIntArray( 31, 16, 30 ), PoolIntArray( 31, 17, 49 ), PoolIntArray( 31, 49, 50, 43 ), PoolIntArray( 36, 43, 51, 52 ) ]
outlines = [ PoolVector2Array( -339, 87, -161, 88, -150, 42, -6, 14, -6, -10, 151, -10, 150, -49, 194, -89, 226, -89, 235, -16, 247, -48, 307, -47, 323, -57, 373, -38, 409, -38, 409, -103, 481, -102, 512, -169, 471, -169, 468, -138, 449, -122, 315, -123, 315, -153, 427, -152, 427, -171, 460, -166, 461, -195, 478, -195, 478, -208, 592, -272, 450, -257, 451.34, -206, 413, -206, 366, -204, 365, -227, 430, -227, 429, -260, 482, -256, 519, -283, 344, -361, 268, -268, 276, -101, 388, -101, 388, -65, 383, -59, 361, -60, 362, -75, 252, -77, 254, -101, 274, -101, 265.791, -268.975, 346, -372, -342, -8 ) ]

[sub_resource type="SpriteFrames" id=100]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 1 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=98]
radius = 181.069

[sub_resource type="CircleShape2D" id=99]
radius = 12.0

[node name="Navigation2D" type="Navigation2D"]

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="."]
navpoly = SubResource( 97 )

[node name="Enemy_Drone" type="KinematicBody2D" parent="."]
position = Vector2( 397, -254 )
collision_layer = 0
collision_mask = 0
script = ExtResource( 3 )
path_to_player = NodePath("../Player")
path_to_drone_int_pos_placeholder = NodePath("../Sprite")

[node name="lasers" type="RayCast2D" parent="Enemy_Drone"]
enabled = true
cast_to = Vector2( 700, 0 )
collision_mask = 5
script = ExtResource( 10 )
__meta__ = {
"_edit_group_": true
}

[node name="Line2D" type="Line2D" parent="Enemy_Drone/lasers"]
points = PoolVector2Array( 0, 0, 100, 0 )
default_color = Color( 1, 1, 1, 1 )

[node name="Tween" type="Tween" parent="Enemy_Drone/lasers"]

[node name="laser_duration" type="Timer" parent="Enemy_Drone/lasers"]
wait_time = 2.0
one_shot = true

[node name="laser_cooldown" type="Timer" parent="Enemy_Drone/lasers"]
wait_time = 2.0
one_shot = true

[node name="Drone_Sprite" type="AnimatedSprite" parent="Enemy_Drone"]
scale = Vector2( 2, 2 )
frames = SubResource( 100 )
playing = true

[node name="RaycastBox" type="Sprite" parent="Enemy_Drone"]
script = ExtResource( 4 )
path_to_player = NodePath("../../Player")

[node name="RayCast2D" type="RayCast2D" parent="Enemy_Drone/RaycastBox"]
rotation = -0.174533
enabled = true
cast_to = Vector2( 180, 0 )
collision_mask = 5

[node name="RayCast2D2" type="RayCast2D" parent="Enemy_Drone/RaycastBox"]
enabled = true
cast_to = Vector2( 180, 0 )
collision_mask = 5

[node name="RayCast2D3" type="RayCast2D" parent="Enemy_Drone/RaycastBox"]
rotation = 0.174533
enabled = true
cast_to = Vector2( 180, 0 )
collision_mask = 5

[node name="Timer" type="Timer" parent="Enemy_Drone"]
wait_time = 2.0
autostart = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="Enemy_Drone"]
target_desired_distance = 15.0

[node name="Area2D" type="Area2D" parent="Enemy_Drone"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy_Drone/Area2D"]
shape = SubResource( 98 )

[node name="Drone_Collision" type="CollisionShape2D" parent="Enemy_Drone"]
position = Vector2( 0, 3 )
shape = SubResource( 99 )

[node name="TrackingTimer" type="Timer" parent="Enemy_Drone"]
wait_time = 5.0
one_shot = true

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( -126, -97 )
acceleration = 350

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 397, -254 )

[connection signal="fire" from="Enemy_Drone" to="Enemy_Drone/lasers" method="_on_Enemy_Drone_fire"]
[connection signal="stop_fire" from="Enemy_Drone" to="Enemy_Drone/lasers" method="_on_Enemy_Drone_stop_fire"]
[connection signal="timeout" from="Enemy_Drone/lasers/laser_duration" to="Enemy_Drone/lasers" method="_on_laser_duration_timeout"]
[connection signal="timeout" from="Enemy_Drone/lasers/laser_cooldown" to="Enemy_Drone/lasers" method="_on_laser_duration_timeout"]
[connection signal="rays_detecting" from="Enemy_Drone/RaycastBox" to="Enemy_Drone" method="_on_RaycastBox_rays_detecting"]
[connection signal="rays_lost" from="Enemy_Drone/RaycastBox" to="Enemy_Drone" method="_on_RaycastBox_rays_lost"]
[connection signal="body_entered" from="Enemy_Drone/Area2D" to="Enemy_Drone" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Enemy_Drone/Area2D" to="Enemy_Drone" method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Enemy_Drone/TrackingTimer" to="Enemy_Drone" method="_on_TrackingTimer_timeout"]
